# rag_vinuni_chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.py
app/: __init__.py  __main__.py  _config.py  enums.py  main.py  paths.py
app/components/embedding/: component.py
app/components/ingest/: component.py
app/components/llm/: component.py
app/components/node_store/: component.py
app/components/vector_store/: component.py
app/server/chat/: router.py  schemas.py  service.py  utils.py
app/server/embedding/: router.py  schemas.py  service.py
app/server/ingest/: schemas.py  service.py
app/ui/: schemas.py  ui_telegram.py
